# xzile

./: .gitignore  FAQ  Makefile.am  NEWS  README  README.md  UTF8.TXT  bootstrap.conf  cfg.mk  configure.ac
build-aux/: .gitignore  release.sh  zile-help2man-wrapper
doc/: Makefile.am  man-extras
gl/lib/: regcomp.c.diff
gl/top/: README-release
m4/: .gitignore  ax_require_defined.m4  pkg.m4
src/: Makefile.am  bind.vala  buffer.vala  c_highlighter.vala  debug.vala  estr.vala  file.vala  funcs.vala  keycode.vala  layout.vala  line.vala  main.vala  minibuf.vala  redisplay.vala  registers.vala  syntax.vala  tbl_bindings.pl  tbl_opts.vala  tbl_vars.vala  term_curses.vala  term_minibuf.vala  term_redisplay.vala  theme.vala  utf8.vala  variables.vala  window.vala
src/modes/: c-family-mode.vala  c-mode.vala  comment-definition.vala  comment-style.vala  cpp-mode.vala  filetype-map.vala  python-mode.vala
tests/: Makefile.am  duplicate-line.el  duplicate-line.output  move-text-down.el  move-text-down.output  move-text-up.el
tests/interactive/: beginning-of-buffer.output  end-of-buffer.output
